--- a/apache-tomcat-9.0.70/webapps/CGA105G7/WEB-INF/web.xml
+++ b/apache-tomcat-9.0.70/webapps/CGA105G7/WEB-INF/web.xml
@@ -15,6 +15,6 @@
   </servlet>
   <servlet-mapping>
     <servlet-name>LocationServlet</servlet-name>
-    <url-pattern>/back-end/loc.do</url-pattern>
+    <url-pattern>/back-end/Location/loc.do</url-pattern>
   </servlet-mapping>
 </web-app>
